# c-template

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.c
.github/workflows/: cmake.yml
bench/: main.cpp
src/: armstrong_numbers.c  armstrong_numbers.h
tests/: test.cpp  test2.cpp
